--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>业务账号</title>
+<title>账号相关</title>
 <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" name="viewport"/>
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
@@ -27,9 +27,9 @@
 	<div class="fenge_box">
 
 		<div class="qpkuai">
-			<h1>YINYU·语雀</h1>
+			<h1>语雀</h1>
 			<p class="beizhu2">产品相关文档</p>
-			<p class="beizhu4"><a href="https://yinyu.yuque.com/" target="_blank" rel="noopener noreferrer nofollow">https://yinyu.yuque.com/</a></p>
+			<p class="beizhu4"><a href="https://www.yuque.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.yuque.com/</a></p>
 			<p class="beizhu3"><span>yewu@mail.com</span><em>----</em><span>pw</span></p>
 		</div>
 
