--- a/pic.html
+++ b/pic.html
@@ -30,7 +30,7 @@
 		<div class="zuhe">
 			<h1>Github</h1>
 			<p class="beizhu2"><a href="https://github.com/mibanapp/web" target="_blank" rel="noopener noreferrer nofollow">https://github.com/mibanapp/web</a></p>
-			<p class="beizhu3"><span>mibanapp</span><em>----</em><span>yewu@mail.com</span></p>
+			<p class="beizhu3"><span>mibanapp</span><em>----</em><span>yewu@miban.ml</span></p>
 		</div>
 	</div>
 
