--- a/index.html
+++ b/index.html
@@ -82,16 +82,14 @@
 			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
 		</div>
 
-	</div>
-
-
-	<div class="fenge_box" style="margin-top:70px;">
 		<div class="qpkuai">
-			<h1 style="color:#fff;">大聪明</h1>
-			<p class="beizhu3" style="color:#fff;"><span>Miban888@</span></p>
+			<h1>CloudFlare</h1>
+			<p class="beizhu2">miban.ml -- 有效期至：2022-03-23</p>
+			<p class="beizhu4"><a href="https://www.cloudflare.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.cloudflare.com/</a></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
 		</div>
-	</div>
 
+	</div>
 
 </div>
 
