--- a/qita.html
+++ b/qita.html
@@ -28,8 +28,13 @@
 		<div class="qpkuai">
 			<h1>微博</h1>
 			<p class="beizhu2">可用于快捷登录58PIC-千图网</p>
-			<p class="beizhu2"><a href="https://www.58pic.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.58pic.com/</a></p>
-			<p class="beizhu3"><span>18916751582</span><em>----</em><span>qq12345678</span></p>
+			<p class="beizhu3"><span>18916751582</span><em>----</em><span>q*12****78</span></p>
+		</div>
+
+		<div class="qpkuai">
+			<h1>大聪明</h1>
+			<p class="beizhu2">看着不太聪明的样子</p>
+			<p class="beizhu3"><span>Miban888@</span><em>----</em><span>q*12****78</span></p>
 		</div>
 
 	</div>
