--- a/index.html
+++ b/index.html
@@ -30,63 +30,63 @@
 			<h1>语雀</h1>
 			<p class="beizhu2">产品相关文档</p>
 			<p class="beizhu4"><a href="https://www.yuque.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.yuque.com/</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>墨刀</h1>
 			<p class="beizhu2">产品原型·交互图 -- 会员至：2022-06-09</p>
 			<p class="beizhu4"><a href="https://modao.cc/" target="_blank" rel="noopener noreferrer nofollow">https://modao.cc/</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>ProcessON</h1>
 			<p class="beizhu2">流程图</p>
 			<p class="beizhu4"><a href="https://www.processon.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.processon.com/</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>蓝湖</h1>
 			<p class="beizhu2">设计图·尺寸标注</p>
 			<p class="beizhu4"><a href="https://lanhuapp.com/" target="_blank" rel="noopener noreferrer nofollow">https://lanhuapp.com/</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>禅道</h1>
 			<p class="beizhu2">项目管理</p>
 			<p class="beizhu4"><a href="http://miban.yinyunet.com/" target="_blank" rel="noopener noreferrer nofollow">http://miban.yinyunet.com/</a></p>
-			<p class="beizhu3"><span>libai</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>libai</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>EX-Mail</h1>
 			<p class="beizhu2">腾讯企业邮箱</p>
 			<p class="beizhu4"><a href="https://exmail.qq.com/" target="_blank" rel="noopener noreferrer nofollow">https://exmail.qq.com/</a></p>
-			<p class="beizhu3"><span>libai@y**yun*t.com</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>libai@y**yun*t.com</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>ProtonMail</h1>
 			<p class="beizhu2">ProtonMail</p>
 			<p class="beizhu4"><a href="https://mail.protonmail.com/" target="_blank" rel="noopener noreferrer nofollow">https://mail.protonmail.com/</a></p>
-			<p class="beizhu3"><span>6ayavb@protonmail.com</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>6ayavb@protonmail.com</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>VK Mail</h1>
 			<p class="beizhu2">VK WorkMail</p>
 			<p class="beizhu4"><a href="https://biz.mail.ru/login/miban.ml" target="_blank" rel="noopener noreferrer nofollow">https://biz.mail.ru/login/miban.ml</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 		<div class="qpkuai">
 			<h1>CloudFlare</h1>
 			<p class="beizhu2">miban.ml -- 有效期至：2022-03-23</p>
 			<p class="beizhu4"><a href="https://www.cloudflare.com/" target="_blank" rel="noopener noreferrer nofollow">https://www.cloudflare.com/</a></p>
-			<p class="beizhu3"><span>yewu@miban.ml</span><em>----</em><span>pw</span></p>
+			<p class="beizhu3"><span>yewu@miban.ml</span></p>
 		</div>
 
 	</div>
