--- a/qita.html
+++ b/qita.html
@@ -33,7 +33,7 @@
 
 		<div class="qpkuai">
 			<h1>大聪明</h1>
-			<p class="beizhu2">看着不太聪明的样子</p>
+			<p class="beizhu2">看着不大聪明的样子</p>
 			<p class="beizhu3"><span>Miban888@</span><em>----</em><span>q*12****78</span></p>
 		</div>
 
