--- a/wifi.html
+++ b/wifi.html
@@ -28,19 +28,7 @@
 
 	<div class="qpkuai">
 		<div class="zuhe">
-			<p><span class="sp1">星球娱乐201</span><em>----</em><span class="sp2">xqyl1705</span></p>
-		</div>
-	</div>
-
-	<div class="qpkuai">
-		<div class="zuhe">
-			<p><span class="sp1">星球06</span><em>----</em><span class="sp2">xqyl0616</span></p>
-		</div>
-	</div>
-
-	<div class="qpkuai">
-		<div class="zuhe">
-			<p><span class="sp1">星球07</span><em>----</em><span class="sp2">xqyl0717</span></p>
+			<p><span class="sp1">_VelopSetup805</span><em>----</em><span class="sp2">xqyl1705</span></p>
 		</div>
 	</div>
 
