--- a/qita.html
+++ b/qita.html
@@ -14,6 +14,7 @@
 <div class="amenu">
 	<ul>
 		<li><a href="index.html">账号相关</a></li>
+		<li><a href="yuncc.html">云存储</a></li>
 		<li><a href="pic.html">图片托管</a></li>
 		<li><a href="qita.html" class="cur">其他账号</a></li>
 		<li><a href="wifi.html">WIFI</a></li>
