--- a/pic.html
+++ b/pic.html
@@ -15,6 +15,7 @@
 <div class="amenu">
 	<ul>
 		<li><a href="index.html">账号相关</a></li>
+		<li><a href="yuncc.html">云存储</a></li>
 		<li><a href="pic.html" class="cur">图片托管</a></li>
 		<li><a href="qita.html">其他账号</a></li>
 		<li><a href="wifi.html">WIFI</a></li>
@@ -30,7 +31,7 @@
 		<div class="zuhe">
 			<h1>Github</h1>
 			<p class="beizhu2"><a href="https://github.com/mibanapp/web" target="_blank" rel="noopener noreferrer nofollow">https://github.com/mibanapp/web</a></p>
-			<p class="beizhu3"><span>mibanapp</span><em>----</em><span>yewu@miban.ml</span></p>
+			<p class="beizhu3"><span>mibanapp</span><em>----</em><span>libai@yinyunet.com</span></p>
 		</div>
 	</div>
 
@@ -38,11 +39,11 @@
 		<!-- QUKAUI -->
 		<div class="qpkuai" style="width:100%;">
 			<h1>调用格式</h1>
-			<p style="margin-top:4px;"><span style="background:#333;padding:2px 6px;color:#ff8585;font-size:14px;">https://cdn.jsdelivr.net/gh/你的用户名/你的仓库名@发布的版本号(版本号非必须)/文件路径</span></p>
+			<p style="margin-top:4px;"><span style="background:#333;padding:2px 6px;color:#ff8585;font-size:14px;">https://fastly.jsdelivr.net/gh/你的用户名/你的仓库名@发布的版本号(版本号非必须)/文件路径</span></p>
 			<p class="beizhu3">其中：版本号不是必需的，是为了区分新旧资源，如果不使用版本号，将会直接引用最新资源。</p>
 			<br>
 			<p class="beizhu3">如下面这样：</p>
-			<p class="beizhu3"><a href="https://cdn.jsdelivr.net/gh/mibanapp/web/tool/img/match_boy_pipei_qq.webp" target="_blank" rel="noopener noreferrer nofollow">https://cdn.jsdelivr.net/gh/mibanapp/web/tool/img/match_boy_pipei_qq.webp</a></p>
+			<p class="beizhu3"><a href="https://fastly.jsdelivr.net/gh/mibanapp/web/tool/img/match_boy_pipei_qq.webp" target="_blank" rel="noopener noreferrer nofollow">https://fastly.jsdelivr.net/gh/mibanapp/web/tool/img/match_boy_pipei_qq.webp</a></p>
 		</div>
 	</div>
 
@@ -54,7 +55,7 @@
 			<br>
 			<p class="beizhu3" style="color:#333;">对于 jsDelivr，缓存刷新的方式也很简单，只需将想刷新的链接的开头的cdn 更改为 purge，不过官网说后面会推出刷新工具，我这边还在观望中。</p>
 			<p style="margin-top:10px;">把</p>
-			<p style="margin:5px 0px;"><span style="background:#333;padding:2px 6px;color:#ff8585;font-size:14px;">https://cdn.jsdelivr.net/</span></p>
+			<p style="margin:5px 0px;"><span style="background:#333;padding:2px 6px;color:#ff8585;font-size:14px;">https://fastly.jsdelivr.net/</span></p>
 			<p class="">替换成</p>
 			<p style="margin:5px 0px;"><span style="background:#333;padding:2px 6px;color:#ff8585;font-size:14px;">https://purge.jsdelivr.net/</span></p>
 			<br>
